comparission alignment issue

--- a/src/style.css
+++ b/src/style.css
@@ -577,13 +577,13 @@ display:flex;
   height: 300px;
 }
 .my-button {
-  background-color: #526652;
+  background-color: whitesmoke;
   color: black;
-  padding: 0px 0px;
+  padding: 2px 5px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 12px;
-  margin: 0px 0px;
+  font-size: 16px;
+  margin: 2px 2px;
   cursor: pointer;
 }
